# my_aplications_mirror

./: NCR_RAI_LIBERAR.xlsx  README.md  app.py  calc_coin.py  db.py  main.py  pyproject.toml  requirements.txt  testes.py
DB_JSON/: DF_DOLAR.xlsx  db.json  dbg.json  dbi.json
static/: INT_DELNT_CRTL_META_REV.xlsx  NCR_RAI_LIBERAR.xlsx
static/css/: main.css  styles-coin.css  styles-games.css  styles.css
static/js/: script-coin.js
templates/: createtable.html  fileform.html  home-ncr.html  home.html  layout.html  login.html  message-erro-file.html  message.html  upload.html  userarea.html  userarea_loged.html
templates/coin/: coin-show.html  index-coin.html
templates/game/: game-choise.html  index-game.html  loose.html  result-game-.html  result-game.html  win.html
templates/ncr/: fileform.html  home-ncr.html  login.html  message-erro-file.html  message.html  register.html  upload.html  userarea.html  userarea_loged.html
