[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tinydb = "^3.15"
xlrd = "^1.2"
flask = "^1.1"
openpyxl = "^3.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
